bundles/org.openhab.binding.jellyfin/src/main/java/org/openhab/binding/jellyfin/internal/api/generated/10.10.3/docs/LibraryOptions.md


# LibraryOptions


## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**enabled** | **Boolean** |  |  [optional] |
|**enablePhotos** | **Boolean** |  |  [optional] |
|**enableRealtimeMonitor** | **Boolean** |  |  [optional] |
|**enableLUFSScan** | **Boolean** |  |  [optional] |
|**enableChapterImageExtraction** | **Boolean** |  |  [optional] |
|**extractChapterImagesDuringLibraryScan** | **Boolean** |  |  [optional] |
|**enableTrickplayImageExtraction** | **Boolean** |  |  [optional] |
|**extractTrickplayImagesDuringLibraryScan** | **Boolean** |  |  [optional] |
|**pathInfos** | [**List&lt;MediaPathInfo&gt;**](MediaPathInfo.md) |  |  [optional] |
|**saveLocalMetadata** | **Boolean** |  |  [optional] |
|**enableInternetProviders** | **Boolean** |  |  [optional] |
|**enableAutomaticSeriesGrouping** | **Boolean** |  |  [optional] |
|**enableEmbeddedTitles** | **Boolean** |  |  [optional] |
|**enableEmbeddedExtrasTitles** | **Boolean** |  |  [optional] |
|**enableEmbeddedEpisodeInfos** | **Boolean** |  |  [optional] |
|**automaticRefreshIntervalDays** | **Integer** |  |  [optional] |
|**preferredMetadataLanguage** | **String** | Gets or sets the preferred metadata language. |  [optional] |
|**metadataCountryCode** | **String** | Gets or sets the metadata country code. |  [optional] |
|**seasonZeroDisplayName** | **String** |  |  [optional] |
|**metadataSavers** | **List&lt;String&gt;** |  |  [optional] |
|**disabledLocalMetadataReaders** | **List&lt;String&gt;** |  |  [optional] |
|**localMetadataReaderOrder** | **List&lt;String&gt;** |  |  [optional] |
|**disabledSubtitleFetchers** | **List&lt;String&gt;** |  |  [optional] |
|**subtitleFetcherOrder** | **List&lt;String&gt;** |  |  [optional] |
|**disabledMediaSegmentProviders** | **List&lt;String&gt;** |  |  [optional] |
|**mediaSegmentProvideOrder** | **List&lt;String&gt;** |  |  [optional] |
|**skipSubtitlesIfEmbeddedSubtitlesPresent** | **Boolean** |  |  [optional] |
|**skipSubtitlesIfAudioTrackMatches** | **Boolean** |  |  [optional] |
|**subtitleDownloadLanguages** | **List&lt;String&gt;** |  |  [optional] |
|**requirePerfectSubtitleMatch** | **Boolean** |  |  [optional] |
|**saveSubtitlesWithMedia** | **Boolean** |  |  [optional] |
|**saveLyricsWithMedia** | **Boolean** |  |  [optional] |
|**saveTrickplayWithMedia** | **Boolean** |  |  [optional] |
|**disabledLyricFetchers** | **List&lt;String&gt;** |  |  [optional] |
|**lyricFetcherOrder** | **List&lt;String&gt;** |  |  [optional] |
|**preferNonstandardArtistsTag** | **Boolean** |  |  [optional] |
|**useCustomTagDelimiters** | **Boolean** |  |  [optional] |
|**customTagDelimiters** | **List&lt;String&gt;** |  |  [optional] |
|**delimiterWhitelist** | **List&lt;String&gt;** |  |  [optional] |
|**automaticallyAddToCollection** | **Boolean** |  |  [optional] |
|**allowEmbeddedSubtitles** | **EmbeddedSubtitleOptions** | An enum representing the options to disable embedded subs. |  [optional] |
|**typeOptions** | [**List&lt;TypeOptions&gt;**](TypeOptions.md) |  |  [optional] |



